# pyspark-msgraph-source

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: init-env.sh
.github/workflows/: publish-to-pypi.yml  test.yml
docs/: getting-started.md  index.md
docs/api/: core.md  index.md
docs/api/core/: async-iterator.md  client.md  models.md  resource-provider.md  source.md  utils.md
docs/api/resources/: index.md  list-items.md
docs/guides/: list-items.md
src/pyspark_msgraph_source/core/: async_interator.py  base_client.py  models.py  resource_provider.py  source.py
src/pyspark_msgraph_source/resources/: list_items.py
src/source_faker/: source.py  spark.py
src/source_msgraph/: async_interator.py  client.py  generate_docs.py  graph.py  models.py  resource_resolver.py  resources.py  source.py
src/source_msgraph/core/: base_client.py  models.py  resource_provider.py  source.py  utils.py
src/source_msgraph/msgraph_spark/: client.py  fetcher.py  options.py  utils.py
src/source_msgraph/resources/: base_options.py  list_items.py
src/source_msgraph/resources/sites/: lists.py
tests/: conftest.py  test_source.py  test_test.py
